--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/runtime": "^7.23.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^12.0.0",
+    "@types/jquery": "^3.5.32",
     "babel-jest": "^27.5.1",
     "concurrently": "^6.2.1",
     "cross-env": "^7.0.3",
@@ -38,6 +39,9 @@
     "jest-cli": "^27.5.1",
     "prettier": "^2.3.2",
     "pretty-quick": "^3.1.1",
+    "sass": "^1.86.1",
+    "sass-loader": "^16.0.5",
+    "style-loader": "^4.0.0",
     "ts-config-single-spa": "^3.0.0",
     "typescript": "^4.3.5",
     "webpack": "^5.89.0",
